--- a/layouts/page/home.html
+++ b/layouts/page/home.html
@@ -10,7 +10,7 @@
         <a class="btn btn-primary mt-2" href="/team" role="button">Get to know us</a>
       </div>
       <div class="col">
-        <img src="img/home.png" alt="uLynks" class="img-fluid" width="800">
+        <img src="/home/home.png" alt="uLynks" class="img-fluid" width="800">
       </div>
     </div>
 
@@ -63,19 +63,20 @@
       <h1 class="fw-bold">Brands that trust us</h1>
       <table class="w-100">
         <tr>
-          <td class="text-center align-middle p-5"><img class="img-fluid" src="img/white-sdu.png" alt="SDU">
+          <td class="text-center align-middle p-5"><img class="img-fluid" src="/home/white-sdu.png" alt="SDU">
           </td>
-          <td class="text-center align-middle p-5"><img class="img-fluid" src="img/white-aa.png" alt="Aalborg">
+          <td class="text-center align-middle p-5"><img class="img-fluid" src="/home/white-aa.png" alt="Aalborg">
           </td>
-          <td class="text-center align-middle p-5"><img class="img-fluid" src="img/white-yerun.png" alt="YERUN">
+          <td class="text-center align-middle p-5"><img class="img-fluid" src="/home/white-yerun.png" alt="YERUN">
         </tr>
         <tr>
-          <td class="text-center align-middle p-5"><img class="img-fluid" src="img/white-prep4blue.png" alt="PREP4BLUE">
+          <td class="text-center align-middle p-5"><img class="img-fluid" src="/home/white-prep4blue.png"
+              alt="PREP4BLUE">
           </td>
-          <td class="text-center align-middle p-5"><img class="img-fluid" src="img/white-banos.png"
+          <td class="text-center align-middle p-5"><img class="img-fluid" src="/home/white-banos.png"
               alt="Blue Mission BANOS">
           </td>
-          <td class="text-center align-middle p-5"><img class="img-fluid" src="img/white-bmaa.png"
+          <td class="text-center align-middle p-5"><img class="img-fluid" src="/home/white-bmaa.png"
               alt="Blue Mission AA">
           </td>
           </td>
