--- a/themes/ulynks/layouts/index.html
+++ b/themes/ulynks/layouts/index.html
@@ -11,7 +11,7 @@
         <a class="btn btn-primary mt-2" href="/team" role="button">Get to know us</a>
       </div>
       <div class="col">
-        <img src="img/home.png" alt="uLynks" class="img-fluid" width="800">
+        <img src="/home/home.png" alt="uLynks" class="img-fluid" width="800">
       </div>
     </div>
 
@@ -64,24 +64,24 @@
       <h1 class="fw-bold">Brands that trust us</h1>
       <div class="row mb-5 p-5">
         <div class="col-md-4">
-          <img src="img/white-sdu.png" alt="SDU" class="img-fluid" width=100>
+          <img src="/home/white-sdu.png" alt="SDU" class="img-fluid" width=100>
         </div>
         <div class="col-md-4">
-          <img src="img/white-aa.png" alt="Aalborg" class="img-fluid" width=100>
+          <img src="/home/white-aa.png" alt="Aalborg" class="img-fluid" width=100>
         </div>
         <div class="col-md-4">
-          <img src="img/white-banos.png" alt="Blue Mission BANOS" class="img-fluid" width=100>
+          <img src="/home/white-banos.png" alt="Blue Mission BANOS" class="img-fluid" width=100>
         </div>
       </div>
       <div class="row  mb-5 p-5">
         <div class="col-md-4">
-          <img src="img/white-prep4blue.png" alt="PREP4BLUE" class="img-fluid" width=200>
+          <img src="/home/white-prep4blue.png" alt="PREP4BLUE" class="img-fluid" width=200>
         </div>
         <div class="col-md-4">
-          <img src="img/white-bmaa.png" alt="Blue Mission AA" class="img-fluid" width=200>
+          <img src="/home/white-bmaa.png" alt="Blue Mission AA" class="img-fluid" width=200>
         </div>
         <div class="col-md-4">
-          <img src="img/white-yerun.png" alt="YERUN" class="img-fluid" width=200>
+          <img src="/home/white-yerun.png" alt="YERUN" class="img-fluid" width=200>
         </div>
       </div>
       <a class="btn btn-primary mt-5" href="/portfolio" role="button">See our portfolio</a>
