--- a/layouts/portfolio/list.html
+++ b/layouts/portfolio/list.html
@@ -4,7 +4,7 @@
 
     <h1 class="display-1 pb-4">{{ .Title }}</h1>
 
-    <div class="row row-cols-4">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
 
       {{/* reverse so that the most recent event appears first  */}}
       {{ range .Pages.Reverse }}
