--- a/themes/ulynks/layouts/partials/header.html
+++ b/themes/ulynks/layouts/partials/header.html
@@ -23,11 +23,11 @@
               </a>
             </li>
             {{- end }}
+            <li class="nav-item me-3"><a class="btn btn-primary" href="#"
+                data-mail="{{ .Site.Title }} <{{ .Site.Params.contact.email }}>"
+                data-subject="Sent From {{ .Site.Title }}' Website" role="button">Contact Us</a></li>
           </ul>
-          <a class="btn btn-primary" href="#" data-mail="{{ .Site.Title }} <{{ .Site.Params.contact.email }}>"
-            data-subject="Sent From {{ .Site.Title }}' Website" role="button">Contact Us</a>
         </div>
-
       </div>
     </nav>
 
