--- a/layouts/portfolio/list.html
+++ b/layouts/portfolio/list.html
@@ -12,7 +12,7 @@
       {{/* card with image, title, description and buttons  */}}
       <div class="col py-3">
         <div class="card h-100">
-          <div class="card-header text-center">
+          <div class="card-header text-center h-50 d-flex align-items-center">
             <img class="card-img-top" src="{{ .Params.image }}" alt="{{ .LinkTitle }}">
           </div>
           <div class="card-body overflow-y-scroll h-50">
@@ -26,8 +26,6 @@
           </div>
         </div>
       </div>
-
-
 
       {{ end }}
     </div>
