--- a/themes/ulynks/layouts/partials/header.html
+++ b/themes/ulynks/layouts/partials/header.html
@@ -6,7 +6,7 @@
       <div class="container">
 
         <a class="navbar-brand py-0" href="/" title="Home">
-          <img src="/logo/ulynks-logo-orange-horizontal.png" alt="{{ .Site.Title }}" class="img-fluid" width="200">
+          <img src="/logo/ulynks-logo-orange-horizontal.svg" alt="{{ .Site.Title }}" class="img-fluid" width="200">
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
