--- a/layouts/team/single.html
+++ b/layouts/team/single.html
@@ -2,22 +2,29 @@
 <main>
   <div class="container py-5">
 
-    <div class="float-end ps-5 w-25"><img class="rounded" src="{{ .Params.image }}" alt="{{ .LinkTitle }}"></div>
+    <div class="row">
+      <div class="col-sm-8 py-3">
+        <h1 class="display-1">{{ .Title }}</h1>
 
-    <h1 class="display-1">{{ .Title }}</h1>
+        {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
 
-    {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
+        {{ $dateMachine := .Date | time.Format "2024-02-20T00:00:45+01:00" }}
+        {{ $dateHuman := .Date | time.Format ":date_long" }}
+        <p class="text-body-secondary py-3"><time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time></p>
 
-    {{ $dateMachine := .Date | time.Format "2024-02-20T00:00:45+01:00" }}
-    {{ $dateHuman := .Date | time.Format ":date_long" }}
-    <p class="text-body-secondary py-3"><time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time></p>
+        {{ .Content }}
 
-    {{ .Content }}
+        <p>
+          <a class="btn btn-primary me-2" href="{{ .Params.linkedin }}" role="button"><i class="bi bi-linkedin"></i></a>
+          <a class="btn btn-primary me-2" href="{{ .Params.github }}" role="button"><i class="bi bi-github"></i></a>
+        </p>
+      </div>
+      <div class="col-sm-4 py-3">
+        <img class="rounded img-fluid" src="{{ .Params.image }}" alt="{{ .LinkTitle }}">
+      </div>
+    </div>
 
-    <p>
-      <a class="btn btn-primary me-2" href="{{ .Params.linkedin }}" role="button"><i class="bi bi-linkedin"></i></a>
-      <a class="btn btn-primary me-2" href="{{ .Params.github }}" role="button"><i class="bi bi-github"></i></a>
-    </p>
+
   </div>
 </main>
 {{ end }}
