--- a/themes/ulynks/layouts/partials/footer.html
+++ b/themes/ulynks/layouts/partials/footer.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="col">
-          <h5>Contacts</h5>
+          <h5>Contact</h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a class="nav-link p-0 text-body-secondary" href="#"
                 data-mail="{{ .Site.Title }} <{{ .Site.Params.contact.email }}>"
@@ -36,7 +36,7 @@
 
         <div class="col text-end">
           {{/* <img src="/logo/ulynks-logo-color-no-text.png" alt="uLynks" class="img-fluid" width="200"> */}}
-          <img src="/logo/ulynks-logo-color.svg" alt="uLynks" height="150">
+          <img src="/logo/ulynks-logo-color.svg" alt="uLynks" class="img-fluid">
         </div>
       </div>
 
