--- a/themes/ulynks/layouts/index.html
+++ b/themes/ulynks/layouts/index.html
@@ -6,8 +6,12 @@
     <div class="row align-items-center">
       <div class="col">
         <h1 class="fw-bold mb-5">Our purpose</h1>
-        <p>Some text explaining why we do what we do, what makes us different and unique, why should people ask for our
-          services and contact us</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+          est laborum.
+        </p>
         <a class="btn btn-primary mt-2" href="/team" role="button">Get to know us</a>
       </div>
       <div class="col">
