partials for expertise cards layouts/partials/expertise.html

--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -12,7 +12,7 @@
         datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
     </p>
 
-    {{ .Content }}
+    {{ .Content | safeHTML }}
 
   </div>
 </main>
