--- a/layouts/page/home.html
+++ b/layouts/page/home.html
@@ -20,50 +20,14 @@
 
     <div class="mt-5 mb-5">
       <h1 class="fw-bold mt-4 mb-5">How we can help you</h1>
-
-
-
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 text-center align-items-center">
-
-        {{ $_expertise := slice
-          (dict
-            "icon" "bar-chart"
-            "title" "Data Analysis"
-            "text" "We offer data analysis consulting services to research support teams"
-          )
-          (dict
-            "icon" "signpost-split"
-            "title" "AI"
-            "text" "We keep up with the latest advancements of AI and can help you take the most out of it"
-          )
-          (dict
-            "icon" "laptop"
-            "title" "Web Apps"
-            "text" "We develop web applications for research support and knowledge sharing"
-          )
-          (dict
-            "icon" "mortarboard-fill"
-            "title" "Training"
-            "text" "We offer training to related to AI and data analysis to non tech professionals"
-          )
-        }}
-        {{ range $_expertise }}
-        <div class="col py-3">
-          <div class="card">
-            <div class="card-body">
-              <p class="fs-1 mb-0"><i class="bi bi-{{ .icon }}"></i></p>
-              <h5 class="card-title fw-bold">{{ .title }}</h5>
-              <p class="card-text">{{ .text }}</p>
-            </div>
-          </div>
-        </div>
-        {{ end }}
-      </div>
-      <p><a class="btn btn-primary mt-5" href="/expertise" role="button">See all expertise</a></p>
+      {{- partial "expertise.html" . -}}
+      {{- /* <p><a class="btn btn-primary mt-5" href="/expertise" role="button">See all expertise</a></p> */}}
     </div>
 
     <div class="mt-5 mb-5">
-      <h1 class="fw-bold">Brands that trust us</h1>
+      <h1 class="fw-bold">Organizations that trust us</h1>
+      <p class="text-muted lead">Here are some of our ongoing collaborations with academic institutions and
+        organizations.</p>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 text-center align-items-center">
         {{ $_brand := slice
           (dict
@@ -71,8 +35,8 @@
             "href" "www.sdu.dk/en"
           )
           (dict
-            "src" "aa"
-            "href" "www.sdu.dk/en"
+            "src" "aau"
+            "href" "www.en.aau.dk"
           )
           (dict
             "src" "yerun"
