--- a/layouts/events/list.html
+++ b/layouts/events/list.html
@@ -8,31 +8,47 @@
 
     <div class="list-group">
       {{ range .Pages }}
-
-      <a href="{{ .RelPermalink }}" class="list-group-item list-group-item-action" aria-current="true">
-
-        <div class="d-flex w-100 justify-content-between">
-
-          <h5 class="my-3">{{ .LinkTitle }}</h5>
-          <small class="mt-1 text-body-secondary">
-            {{ $dateMachine := .Params.dateEvent | time.Format "2024-02-20T00:00:45+01:00" }}
-            {{ $dateHuman := .Params.dateEvent | time.Format ":date_long" }}
-            {{ .Params.location }} - <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
-          </small>
-
-        </div>
+      <a href="{{ .RelPermalink }}" class="list-group-item list-group-item-action p-0">
 
         {{- /*
-            <img class="rounded float-end h-auto pb-2" width="150" src="{{ .Params.image }}">
-        */}}
+        <div class="d-flex w-100 justify-content-between">
 
-        <p class="text-body-secondary mb-2">
+        <h5 class="my-3">{{ .LinkTitle }}</h5>
+        <small class="mt-1 text-body-secondary">
+          {{ $dateMachine := .Params.dateEvent | time.Format "2024-02-20T00:00:45+01:00" }}
+          {{ $dateHuman := .Params.dateEvent | time.Format ":date_long" }}
+          {{ .Params.location }} - <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
+        </small>
+
+    </div>
+
+    <img class="rounded float-end h-auto pb-2" width="150" src="{{ .Params.image }}">
+
+    <p class="text-body-secondary mb-2">
+      {{ .Summary | safeHTML | truncate 200 }}
+    </p>
+    */}}
+
+    <div class="row">
+      <div class="col-md-2">
+        <img src="{{ .Params.image }}" alt="{{ .LinkTitle }}" width="200" height="150">
+      </div>
+      <div class="col-md-10">
+        <small class="float-end p-2 text-body-secondary">
+          {{ $dateMachine := .Params.dateEvent | time.Format "2024-02-20T00:00:45+01:00" }}
+          {{ $dateHuman := .Params.dateEvent | time.Format ":date_long" }}
+          {{ .Params.location }} - <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
+        </small>
+        <h5 class="pt-3">{{ .LinkTitle }}</h5>
+        <p class="text-body-secondary py-2">
           {{ .Summary | safeHTML | truncate 200 }}
         </p>
-      </a>
-
-      {{ end }}
+      </div>
     </div>
+
+    </a>
+    {{ end }}
+  </div>
 
   </div>
 </main>
