--- a/layouts/expertise/list.html
+++ b/layouts/expertise/list.html
@@ -1,38 +1,8 @@
 {{ define "main" }}
 <main>
   <div class="container py-5">
-
-    <h1 class="display-1 pb-4">{{ .Title }}</h1>
-
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
-
-      {{/* reverse so that the most recent event appears first  */}}
-      {{ range .Pages.Reverse }}
-
-      {{/* card with image, title, description and buttons  */}}
-      <div class="col py-3">
-        <div class="card h-100">
-          <div class="card-header text-center">
-            <img class="card-img-top" src="{{ .Params.image }}" alt="{{ .LinkTitle }}">
-          </div>
-          <div class="card-body h-50">
-            <h2 class="card-title">{{ .LinkTitle }}</h2>
-            <p class="card-text">{{ .Summary | safeHTML | truncate 100 }}</p>
-          </div>
-          <div class="card-footer bg-transparent border-dark py-3">
-            <a class="btn btn-primary me-2" href="{{ .RelPermalink }}" role="button">Read more</a>
-            <a class="btn btn-primary me-2" href="#" data-mail="{{ .Site.Title }} <{{ .Site.Params.contact.email }}>"
-              data-subject="Sent From {{ .Site.Title }}' Website" role="button"><i class="bi bi-envelope-fill"></i></a>
-          </div>
-        </div>
-      </div>
-
-
-
-      {{ end }}
-    </div>
-
-
+    <h1 class="display-1 pb-5">{{ .Title }}</h1>
+    {{- partial "expertise.html" . -}}
   </div>
 </main>
 {{ end }}
