--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,15 +3,18 @@
   <div class="container py-5">
 
     <div class="row align-items-center">
-      <div class="col-sm-8 py-3">
-        <h1 class="fw-bold mb-4">Our purpose</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      <div class="col-sm-8 py-3 lead">
+        {{- /*
+          <h1 class="fw-bold mb-4">Our purpose</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
           consequat.</p>
         <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
           pariatur.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
           laborum.</p>
         <a class="btn btn-primary mt-2" href="/team" role="button">Get to know us</a>
+        */}}
+        {{ .Content }}
       </div>
       <div class="col-sm-4 py-3">
         <img src="/home/home.png" alt="uLynks" class="img-fluid">
@@ -61,7 +64,7 @@
         </div>
         {{ end }}
       </div>
-      <p><a class="btn btn-primary mt-5" href="/portfolio" role="button">See our portfolio</a></p>
+      {{- /* <p><a class="btn btn-primary mt-5" href="/portfolio" role="button">See our portfolio</a></p> */}}
     </div>
   </div>
 </main>
