--- a/themes/ulynks/layouts/partials/head.html
+++ b/themes/ulynks/layouts/partials/head.html
@@ -10,7 +10,7 @@
   <meta name="author" content="{{ $title }}">
   {{ $description := or .Description .Summary .Site.Params.description .Site.Params.subtitle }}
   <meta name="description" content="{{ $description }}">
-  {{ hugo.Generator }}
+
   <meta name="twitter:card" content="summary">
   <meta property="og:description" content="{{ $description }}">
   <meta property="og:locale" content="en_US">
@@ -19,6 +19,11 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="{{ .Permalink }}">
   <meta property="twitter:title" content="{{ $title }}">
+
+  {{ $image := or .Params.Image "/favicon/apple-touch-icon.png" }}
+  <meta property="og:image" content="{{ $image }}">
+
+  {{ hugo.Generator }}
 
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
