Bootstrap Custom Tooltips
see: https://getbootstrap.com/docs/5.3/components/tooltips/#custom-tooltips

--- a/layouts/partials/expertise.html
+++ b/layouts/partials/expertise.html
@@ -16,7 +16,7 @@
   {{ end }}
 
   <div class="card-group">
-    <a class="link-dark" href="{{ .RelPermalink }}" data-bs-toggle="tooltip"
+    <a class="link-dark" href="{{ .RelPermalink }}" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip"
       data-bs-title="Open our page on {{ .LinkTitle }}">
       <div class="card h-100">
         <div class="card-body">
