--- a/themes/ulynks/assets/scss/8-custom.scss
+++ b/themes/ulynks/assets/scss/8-custom.scss
@@ -3,4 +3,9 @@ img {
   max-width: 100%
 }
 
-
+// Custom tooltips
+// see: https://getbootstrap.com/docs/5.3/components/tooltips/#custom-tooltips
+.custom-tooltip {
+  --bs-tooltip-bg: var(--bs-orange);
+  --bs-tooltip-color: var(--bs-black);
+}
