team hover picture...

--- a/layouts/team/single.html
+++ b/layouts/team/single.html
@@ -20,7 +20,7 @@
         </p>
       </div>
       <div class="col-sm-4 py-3">
-        <img class="rounded img-fluid" src="{{ .Params.image }}" alt="{{ .LinkTitle }}">
+        <img class="rounded img-fluid team-hover" src="{{ .Params.image }}" alt="{{ .LinkTitle }}">
       </div>
     </div>
 
