--- a/layouts/team/list.html
+++ b/layouts/team/list.html
@@ -16,7 +16,7 @@
       <div class="col py-3">
         <div class="card h-100">
           <div class="card-header text-center p-0">
-            <img class="card-img-top rounded team-hover" src="{{ .Params.image }}" alt="{{ .LinkTitle }}">
+            <img class="card-img-top rounded img-hover" src="{{ .Params.image }}" alt="{{ .LinkTitle }}">
           </div>
           <div class="card-body">
             <h2 class="card-title">{{ .LinkTitle }}</h2>
