--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,7 +17,7 @@
         {{ .Content }}
       </div>
       <div class="col-sm-4 py-3">
-        <img src="/home/home.png" alt="{{ .Content }}" class="img-fluid img-hover">
+        <img src="{{ .Params.image }}" alt="{{ .Content }}" class="img-fluid img-hover">
       </div>
     </div>
 
