<div class="card-group py-2">

--- a/layouts/partials/expertise.html
+++ b/layouts/partials/expertise.html
@@ -15,7 +15,7 @@
   {{ $icon = "mortarboard-fill" }}
   {{ end }}
 
-  <div class="card-group">
+  <div class="card-group py-2">
     <a class="link-dark" href="{{ .RelPermalink }}" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip"
       data-bs-title="Open our page on {{ .LinkTitle }}">
       <div class="card h-100">
