Footer logo properly sized

--- a/themes/ulynks/layouts/partials/footer.html
+++ b/themes/ulynks/layouts/partials/footer.html
@@ -36,7 +36,7 @@
 
         <div class="col text-end">
           {{/* <img src="/logo/ulynks-logo-color-no-text.png" alt="uLynks" class="img-fluid" width="200"> */}}
-          <img src="/logo/ulynks-logo-color.svg" alt="uLynks" class="img-fluid">
+          <img src="/logo/ulynks-logo-color.svg" alt="uLynks" height="175">
         </div>
       </div>
 
