--- a/layouts/portfolio/list.html
+++ b/layouts/portfolio/list.html
@@ -12,10 +12,10 @@
       {{/* card with image, title, description and buttons  */}}
       <div class="col py-3">
         <div class="card h-100">
-          <div class="card-header text-center h-50 d-flex align-items-center">
+          <div class="card-header text-center d-flex align-items-center">
             <img class="card-img-top" src="{{ .Params.image }}" alt="{{ .LinkTitle }}">
           </div>
-          <div class="card-body overflow-y-scroll h-50">
+          <div class="card-body overflow-y-scroll">
             <h2 class="card-title">{{ .LinkTitle }}</h2>
             <p class="card-text">{{ .Summary | safeHTML | truncate 100 }}</p>
           </div>
