--- a/layouts/index.html
+++ b/layouts/index.html
@@ -60,7 +60,7 @@
         }}
         {{ range $_brand }}
         <div class="col py-3">
-          <a href="https://{{ .href }}"><img class="img-fluid" src="/home/white-{{ .src }}.svg" alt="{{ .src }}"></a>
+          <a href="https://{{ .href }}"><img class="img-fluid" src="/home/{{ .src }}-white.svg" alt="{{ .src }}"></a>
         </div>
         {{ end }}
       </div>
