Satisfying @luzep mailto link taste but exposing our email to spammers 🕸️

--- a/themes/ulynks/layouts/partials/footer.html
+++ b/themes/ulynks/layouts/partials/footer.html
@@ -27,9 +27,8 @@
         <div class="col">
           <h5>Contact</h5>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a class="nav-link p-0 text-body-secondary" href="#"
-                data-mail="{{ .Site.Title }} <{{ .Site.Params.contact.email }}>"
-                data-subject="Sent From {{ .Site.Title }}' Website">eMail&nbsp;<i class="bi bi-envelope-fill"></i></a>
+            <li class="nav-item mb-2"><a class="nav-link p-0 text-body-secondary"
+                href="mailto:{{ .Site.Params.contact.email }}">eMail&nbsp;<i class="bi bi-envelope-fill"></i></a>
             </li>
           </ul>
         </div>
