--- a/themes/ulynks/layouts/partials/header.html
+++ b/themes/ulynks/layouts/partials/header.html
@@ -23,9 +23,8 @@
               </a>
             </li>
             {{- end }}
-            <li class="nav-item ms-3"><a class="btn btn-primary" href="#"
-                data-mail="{{ .Site.Title }} <{{ .Site.Params.contact.email }}>"
-                data-subject="Sent From {{ .Site.Title }}' Website" role="button">Contact Us</a></li>
+            <li class="nav-item ms-3"><a class="btn btn-primary" href="mailto:{{ .Site.Params.contact.email }}"
+                role="button">Contact Us</a></li>
           </ul>
         </div>
       </div>
