mailto link refinement

--- a/themes/ulynks/layouts/partials/header.html
+++ b/themes/ulynks/layouts/partials/header.html
@@ -24,7 +24,8 @@
             </li>
             {{- end }}
             <li class="nav-item ms-3"><a class="btn btn-primary" href="mailto:{{ .Site.Params.contact.email }}"
-                role="button">Contact Us</a></li>
+                role="button" data-bs-custom-class="custom-tooltip" data-bs-toggle="tooltip"
+                data-bs-title="Send us an email">Contact Us</a></li>
           </ul>
         </div>
       </div>
