partials/color-mode-switch.html
https://github.com/ulynks/docs/issues/38

--- a/themes/ulynks/layouts/_default/baseof.html
+++ b/themes/ulynks/layouts/_default/baseof.html
@@ -3,6 +3,7 @@
   {{- partial "head.html" . -}}
 
   <body class="d-flex flex-column h-100">
+    {{- partial "color-mode-switch.html" . -}}
     {{- partial "header.html" . -}}
     {{- block "main" . }}{{- end }}
     {{- partial "footer.html" . -}}
