--- a/themes/ulynks/assets/scss/8-fonts.scss
+++ b/themes/ulynks/assets/scss/8-fonts.scss
@@ -1,2 +1,2 @@
-@import "bootstrap-icons/font/bootstrap-icons.css";
+@import "bootstrap-icons/font/bootstrap-icons.min.css";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap");
