ulynks/docs#18 Hugo Shortcodes without Markdown
see: https://gohugo.io/content-management/shortcodes/#shortcodes-without-markdown

--- a/themes/ulynks/layouts/partials/color-mode-switch.html
+++ b/themes/ulynks/layouts/partials/color-mode-switch.html
@@ -7,7 +7,7 @@ Renders a dropdown color mode switch.
   <button class="btn btn-primary py-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button"
     aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (auto)">
     <svg class="bi my-1 theme-icon-active" width="1em" height="1em">
-      <use href="bootstrap-icons.svg#circle-half"></use>
+      <use href="/bootstrap-icons.svg#circle-half"></use>
     </svg>
     <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
   </button>
@@ -16,11 +16,11 @@ Renders a dropdown color mode switch.
       <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light"
         aria-pressed="false">
         <svg class="bi me-2 opacity-50" width="1em" height="1em">
-          <use href="bootstrap-icons.svg#sun-fill"></use>
+          <use href="/bootstrap-icons.svg#sun-fill"></use>
         </svg>
         Light
         <svg class="bi ms-auto d-none" width="1em" height="1em">
-          <use href="bootstrap-icons.svg#check2"></use>
+          <use href="/bootstrap-icons.svg#check2"></use>
         </svg>
       </button>
     </li>
@@ -28,11 +28,11 @@ Renders a dropdown color mode switch.
       <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark"
         aria-pressed="false">
         <svg class="bi me-2 opacity-50" width="1em" height="1em">
-          <use href="bootstrap-icons.svg#moon-stars-fill"></use>
+          <use href="/bootstrap-icons.svg#moon-stars-fill"></use>
         </svg>
         Dark
         <svg class="bi ms-auto d-none" width="1em" height="1em">
-          <use href="bootstrap-icons.svg#check2"></use>
+          <use href="/bootstrap-icons.svg#check2"></use>
         </svg>
       </button>
     </li>
@@ -40,11 +40,11 @@ Renders a dropdown color mode switch.
       <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto"
         aria-pressed="true">
         <svg class="bi me-2 opacity-50" width="1em" height="1em">
-          <use href="bootstrap-icons.svg#circle-half"></use>
+          <use href="/bootstrap-icons.svg#circle-half"></use>
         </svg>
         Auto
         <svg class="bi ms-auto d-none" width="1em" height="1em">
-          <use href="bootstrap-icons.svg#check2"></use>
+          <use href="/bootstrap-icons.svg#check2"></use>
         </svg>
       </button>
     </li>
@@ -57,7 +57,7 @@ Renders a dropdown color mode switch.
     type="button" aria-expanded="false" data-bs-toggle="dropdown" data-bs-display="static"
     aria-label="Toggle theme (auto)">
     <svg class="bi my-1 theme-icon-active">
-      <use href="bootstrap-icons.svg#circle-half"></use>
+      <use href="/bootstrap-icons.svg#circle-half"></use>
     </svg>
     <span class="d-lg-none ms-2" id="bd-theme-text">Toggle theme</span>
   </button>
@@ -66,11 +66,11 @@ Renders a dropdown color mode switch.
       <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light"
         aria-pressed="false">
         <svg class="bi me-2 opacity-50">
-          <use href="bootstrap-icons.svg#sun-fill"></use>
+          <use href="/bootstrap-icons.svg#sun-fill"></use>
         </svg>
         Light
         <svg class="bi ms-auto d-none">
-          <use href="bootstrap-icons.svg#check2"></use>
+          <use href="/bootstrap-icons.svg#check2"></use>
         </svg>
       </button>
     </li>
@@ -78,11 +78,11 @@ Renders a dropdown color mode switch.
       <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark"
         aria-pressed="false">
         <svg class="bi me-2 opacity-50">
-          <use href="bootstrap-icons.svg#moon-stars-fill"></use>
+          <use href="/bootstrap-icons.svg#moon-stars-fill"></use>
         </svg>
         Dark
         <svg class="bi ms-auto d-none">
-          <use href="bootstrap-icons.svg#check2"></use>
+          <use href="/bootstrap-icons.svg#check2"></use>
         </svg>
       </button>
     </li>
@@ -90,11 +90,11 @@ Renders a dropdown color mode switch.
       <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto"
         aria-pressed="true">
         <svg class="bi me-2 opacity-50">
-          <use href="bootstrap-icons.svg#circle-half"></use>
+          <use href="/bootstrap-icons.svg#circle-half"></use>
         </svg>
         Auto
         <svg class="bi ms-auto d-none">
-          <use href="bootstrap-icons.svg#check2"></use>
+          <use href="/bootstrap-icons.svg#check2"></use>
         </svg>
       </button>
     </li>
