--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,8 @@
 {{ define "main" }}
 <main>
+
+  {{- partial "carousel.html" . -}}
+
   <div class="container py-5">
 
     <div class="row align-items-center">
