--- a/layouts/portfolio/single.html
+++ b/layouts/portfolio/single.html
@@ -1,5 +1,17 @@
 {{ define "main" }}
 <main>
-  {{ .Content }}
+  <div class="container py-5">
+
+    <h1 class="display-1">{{ .Title }}</h1>
+
+    {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
+
+    {{ $dateMachine := .Date | time.Format "2024-02-20T00:00:45+01:00" }}
+    {{ $dateHuman := .Date | time.Format ":date_long" }}
+    <p class="text-body-secondary py-3"><time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time></p>
+
+    <div class="lead">{{ .Content }}</div>
+
+  </div>
 </main>
 {{ end }}
