--- a/layouts/portfolio/list.html
+++ b/layouts/portfolio/list.html
@@ -12,14 +12,14 @@
       {{/* card with image, title, description and buttons  */}}
       <div class="col py-3">
         <div class="card h-100">
-          <div class="card-header text-center d-flex align-items-center">
+          <div class="card-header text-center d-flex align-items-center bg-secondary">
             <img class="card-img-top" src="{{ .Params.image }}" alt="{{ .LinkTitle }}">
           </div>
           <div class="card-body overflow-y-scroll">
             <h2 class="card-title">{{ .LinkTitle }}</h2>
             <p class="card-text">{{ .Summary | safeHTML | truncate 100 }}</p>
           </div>
-          <div class="card-footer bg-transparent border-dark py-3">
+          <div class="card-footer bg-transparent border-0 py-3">
             <a class="btn btn-primary me-2" href="{{ .RelPermalink }}" role="button">Read more</a>
             <a class="btn btn-primary me-2" href="{{ .Params.link }}" rel="noopener noreferrer" role="button"><i
                 class="bi bi-box-arrow-up-right"></i></a>
