ulynks/docs#37 call to action added

--- a/layouts/portfolio/single.html
+++ b/layouts/portfolio/single.html
@@ -13,5 +13,8 @@
     <div class="lead">{{ .Content }}</div>
 
   </div>
+
+  {{ partial "contact-us-inspiration-struck.html" }}
+
 </main>
 {{ end }}
