--- a/layouts/shortcodes/sdu-rio-analytics-funding-web-apps-v1.html
+++ b/layouts/shortcodes/sdu-rio-analytics-funding-web-apps-v1.html
@@ -1,6 +1,5 @@
 {{ if strings.ContainsNonSpace .Inner }}
 
-{{/*
 <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
@@ -58,7 +57,6 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-*/}}
 
 
 <!-- Marketing messaging and featurettes
@@ -68,7 +66,6 @@
 <div class="container marketing">
 
   <!-- Three columns of text below the carousel -->
-  {{/*
   <div class="row">
     <div class="col-lg-4">
       <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
@@ -103,7 +100,7 @@
       <p><a class="btn btn-secondary" href="#">View details »</a></p>
     </div><!-- /.col-lg-4 -->
   </div><!-- /.row -->
-  */}}
+
 
   <!-- START THE FEATURETTES -->
 
@@ -111,20 +108,19 @@
 
   <div class="row featurette">
     <div class="col-md-7">
-      <h2 class="featurette-heading fw-normal lh-1">Call Finder <span class="text-body-secondary">Explore EU funding
-          opportunities.</span></h2>
-      <p class="lead">
-      <ul>
-        <li>Focus on relevant EU calls.</li>
-        <li>Discover EU calls that match your research profile!</li>
-        <li>Search open EU calls using keywords or boolean.</li>
-        <li>Find suitable calls to resubmit rejected proposals.</li>
-      </ul>
-
+      <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-body-secondary">It’ll
+          blow your mind.</span></h2>
+      <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.
       </p>
     </div>
     <div class="col-md-5">
-      <img src="/portfolio/sdu/call-finder.svg" class="d-block w-100" alt="Call Finder">
+      <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
+        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+        preserveAspectRatio="xMidYMid slice" focusable="false">
+        <title>Placeholder</title>
+        <rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%"
+          fill="var(--bs-secondary-color)" dy=".3em">500x500</text>
+      </svg>
     </div>
   </div>
 
@@ -132,19 +128,19 @@
 
   <div class="row featurette">
     <div class="col-md-7 order-md-2">
-      <h2 class="featurette-heading fw-normal lh-1">Call Finder <span class="text-body-secondary">Explore EU funding
-          opportunities</span></h2>
-      <p class="lead">
-      <ul>
-        <li>Focus on relevant EU calls.</li>
-        <li>Discover EU calls that match your research profile!</li>
-        <li>Search open EU calls using keywords or boolean.</li>
-        <li>Find suitable calls to resubmit rejected proposals.</li>
-      </ul>
-      </p>
+      <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for
+          yourself.</span></h2>
+      <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this
+        layout would work with some actual real-world content in place.</p>
     </div>
     <div class="col-md-5 order-md-1">
-      <img src="/portfolio/sdu/call-finder.svg" class="d-block w-100" alt="Call Finder">
+      <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
+        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+        preserveAspectRatio="xMidYMid slice" focusable="false">
+        <title>Placeholder</title>
+        <rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%"
+          fill="var(--bs-secondary-color)" dy=".3em">500x500</text>
+      </svg>
     </div>
   </div>
 
@@ -152,19 +148,20 @@
 
   <div class="row featurette">
     <div class="col-md-7">
-      <h2 class="featurette-heading fw-normal lh-1">Call Finder <span class="text-body-secondary">Explore EU funding
-          opportunities</span></h2>
-      <p class="lead">
-      <ul>
-        <li>Focus on relevant EU calls.</li>
-        <li>Discover EU calls that match your research profile!</li>
-        <li>Search open EU calls using keywords or boolean.</li>
-        <li>Find suitable calls to resubmit rejected proposals.</li>
-      </ul>
-      </p>
+      <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span
+          class="text-body-secondary">Checkmate.</span></h2>
+      <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really
+        intended to be actually read, simply here to give you a better view of what this would look like with some
+        actual content. Your content.</p>
     </div>
     <div class="col-md-5">
-      <img src="/portfolio/sdu/call-finder.svg" class="d-block w-100" alt="Call Finder">
+      <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
+        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+        preserveAspectRatio="xMidYMid slice" focusable="false">
+        <title>Placeholder</title>
+        <rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%"
+          fill="var(--bs-secondary-color)" dy=".3em">500x500</text>
+      </svg>
     </div>
   </div>
 
